--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "uuid": "^8.3.2",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.5",
+    "bcryptjs" : "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0"
   },
